# athena

./: .gitignore  LICENSE.md  Makefile  README.md  config.toml.sample  functions.py  hello.py  main.py  pyproject.toml
functions/: google_calendar.py  weather.py
